Text Align Fix
Fixed Text align in media query (max-width: 1028px)

--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,7 @@ p {
 /* Media Queries */
 
 @media (max-width: 1028px) {
-  #title {
+  #title .container-fluid {
     text-align: center;
   }
 
